# markToTex

./: README.md  pyproject.toml
marktotex/: cli.py
